--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "files.associations": {
+        "*.html": "html",
+        "**/templates/**/*.html": "django-html",
         "random": "cpp",
         "limits": "cpp",
         "memory": "cpp",
         "*.tcc": "cpp",
         "cmath": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "iostream": "cpp"
     }
 }
